--- a/example/style.css
+++ b/example/style.css
@@ -2,22 +2,31 @@ body,
 html,
 #root,
 .app {
-  width: 100vh;
-  height: 100cw;
+  width: 100vw;
+  height: 100vh;
   margin: 0;
   padding: 0;
 }
 
 .presentation {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
+    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   position: absolute;
   top: 40px;
   left: 0;
   width: 100vw;
   height: calc(100vh - 40px);
+  background: #282c34;
+  color: #abb2bf;
+}
+
+.error > pre > code {
+  color: red !important;
 }
 
 pre {
-  color: #686972;
+  color: #abb2bf;
+  background-color: transparent !important;
   margin: 0;
   padding: 0;
 }
@@ -36,7 +45,7 @@ pre {
 .pane {
   overflow-y: auto;
   overflow-x: hidden;
-  background-color: #282c34;
+  background-color: transparent;
   box-sizing: border-box;
   width: 50%;
   height: 100%;
@@ -96,6 +105,7 @@ pre {
   top: 0px;
   height: 40px;
   width: 100vw;
+  z-index: 101;
 }
 
 .navigation > button {
